--- a/dev/.htaccess
+++ b/dev/.htaccess
@@ -3,10 +3,9 @@ Options All -ExecCGI -Indexes -Includes +FollowSymLinks
 RewriteEngine On
 RewriteBase /
     RewriteCond %{HTTP_HOST} ^hostel.creative-seo.ru
-    RewriteRule (.*) http://hostel.creative-seo.ru/$1 [R=301,L]
+    RewriteRule (.*) http://www.hostel.creative-seo.ru/$1 [R=301,L]
     RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.php\ HTTP/
-    RewriteRule ^index\.php$ http://hostel.creative-seo.ru/ [R=301,L]
-
+    RewriteRule ^index\.php$ http://www.hostel.creative-seo.ru/ [R=301,L]
 
 <IfModule mod_setenvif.c>
     SetEnv TZ Europe/Moscow
