--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
-    "name": "smp",
-    "version": "0.0.1",
-    "dependencies": {
-        "jquery": "latest",
-        "bootstrap-sass": "latest",
-        "font-awesome": "latest",
-        "html5shiv": "latest",
-        "respond": "latest"
-    }
+  "name": "smp",
+  "version": "0.0.1",
+  "dependencies": {
+    "jquery": "latest",
+    "bootstrap-sass": "latest",
+    "font-awesome": "latest",
+    "html5shiv": "latest",
+    "respond": "latest",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
+  }
 }
