--- a/dev/.htaccess
+++ b/dev/.htaccess
@@ -7,6 +7,12 @@ RewriteBase /
     RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.php\ HTTP/
     RewriteRule ^index\.php$ http://www.khrapovitsky.ru/ [R=301,L]
 
+Redirect 301 /apartments/8-bed-female-dorm/ /apartments/10-bed-female-dorm/
+Redirect 301 /en/apartments/8-bed-female-dorm/ /en/apartments/10-bed-female-dorm/
+
+Redirect 301 /apartments/10-bed-male-dorm/ /apartments/8-bed-male-dorm/
+Redirect 301 /en/apartments/10-bed-male-dorm/ /en/apartments/8-bed-male-dorm/
+
 <IfModule mod_setenvif.c>
     SetEnv TZ Europe/Moscow
 </IfModule>
